AUTOMAKE_OPTIONS     = 1.4 foreign
MAINTAINERCLEANFILES = Makefile.in

filesdir = $(datadir)/elink/images
files_DATA = \
	bg.jpg \
	icon_01.png \
	icon_02.png \
	icon_03.png \
	icon_04.png \
	icon_05.png \
	icon_06.png \
	icon_07.png \
	icon_08.png \
	icon_09.png \
	icon_10.png \
	icon_11.png \
	icon_12.png \
	icon_13.png \
	icon_14.png \
	icon_15.png \
	icon_16.png \
	icon_17.png \
	icon_18.png \
	icon_19.png \
	icon_20.png \
	icon_21.png \
	icon_22.png \
	icon_23.png \
	icon_24.png \
	icon_25.png \
	icon_26.png \
	icon_27.png \
	icon_28.png \
	icon_29.png \
	icon_30.png \
	icon_31.png \
	icon_32.png \
	icon_33.png \
	icon_34.png \
	icon_35.png \
	icon_36.png

EXTRA_DIST = $(files_DATA)

